--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <div class="search-wrap">
             <div class="search-line">
                 <form action="">
-                    <input type="text" placeholder="Поиск..." required>
+                    <input type="text" placeholder="Поиск..." required autocomplete="off">
                 </form>
                 <span class="search-btn">
                     <img src="media/close.svg" alt="">
@@ -245,20 +245,16 @@
 </header>
 <section class="section1">
     <div class="top_banner_slider">
-        <div class="banner" style="background-image: url('media/banner-img/1.jpg')">
-            <a href=""></a>
-        </div>
-        <div class="banner" style="background-image: url('media/banner-img/3.jpg')">
-            <a href=""></a>
-        </div>
-        <div class="banner" style="background-image: url('media/banner-img/4.jpg')"></div>
-        <div class="banner" style="background-image: url('media/banner-img/5.jpg')"></div>
-        <div class="banner" style="background-image: url('media/banner-img/6.jpg')"></div>
-        <div class="banner" style="background-image: url('media/banner-img/7.jpg')"></div>
-        <div class="banner" style="background-image: url('media/banner-img/8.jpg')"></div>
-        <div class="banner" style="background-image: url('media/banner-img/9.jpg')"></div>
-        <div class="banner" style="background-image: url('media/banner-img/10.jpg')"></div>
-        <div class="banner" style="background-image: url('media/banner-img/banner_1.png')"></div>
+        <div class="banner"><a href="">
+            <img src="http://interconditioner.test-domain1.in.ua/app/media/banner-img/1.jpg" alt="">
+        </a></div>
+        <div class="banner">
+            <a href="/ru">
+                <img src="http://interconditioner.test-domain1.in.ua/app/media/banner-img/banner_1.png" alt="">
+            </a></div>
+        <div class="banner" ><a href="/ru" >
+            <img src="http://interconditioner.test-domain1.in.ua/app/media/banner-img/2,2.jpg" alt="">
+        </a></div>
     </div>
     <div class="top_banner_slider_arrowsBox">
         <div class="prev_btn"></div>
