--- a/contacts.html
+++ b/contacts.html
@@ -197,7 +197,8 @@
     </section>
     <section class="map-wrap">
         <div class="container">
-            <script type="text/javascript" src="//maps-js.apissputnik.ru/v0.3/loader.js?1ItMl5YCyrlc"></script>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5132.047498164524!2d36.362297066560394!3d49.97341317310632!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf0062964d7ecfdc!2z0JjQvdGC0LXRgNC60L7QvdC00LjRhtC40L7QvdC10YAsINGH0LDRgdGCLiDQkNCe!5e0!3m2!1sru!2sua!4v1564995370384!5m2!1sru!2sua" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+<!--            <script type="text/javascript" src="//maps-js.apissputnik.ru/v0.3/loader.js?1ItMl5YCyrlc"></script>-->
         </div>
     </section>
 </main>
