--- a/contacts.html
+++ b/contacts.html
@@ -197,8 +197,7 @@
     </section>
     <section class="map-wrap">
         <div class="container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5132.047498164524!2d36.362297066560394!3d49.97341317310632!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf0062964d7ecfdc!2z0JjQvdGC0LXRgNC60L7QvdC00LjRhtC40L7QvdC10YAsINGH0LDRgdGCLiDQkNCe!5e0!3m2!1sru!2sua!4v1564995370384!5m2!1sru!2sua" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-<!--            <script type="text/javascript" src="//maps-js.apissputnik.ru/v0.3/loader.js?1ItMl5YCyrlc"></script>-->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9499.134798938527!2d36.36141394943198!3d49.97342389492363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x41270bd43cdb5ec3%3A0xf0062964d7ecfdc!2z0JjQvdGC0LXRgNC60L7QvdC00LjRhtC40L7QvdC10YAsINGH0LDRgdGCLiDQkNCe!5e0!3m2!1sru!2sua!4v1565018276373!5m2!1sru!2sua" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
     </section>
 </main>
