--- a/offices.html
+++ b/offices.html
@@ -73,7 +73,9 @@
             </div>
         </div>
         <div class="map-wrap">
-            <script type="text/javascript" src="//maps-js.apissputnik.ru/v0.3/loader.js?1MLkM9IjtPNk"></script>
+            <div class="container">
+                <iframe src="https://www.google.com/maps/d/embed?mid=1lEcJnrbzzYYKOO3_pDBl7F5eJy8zw1_L" width="640" height="480"></iframe>
+            </div>
         </div>
     </div>
 </main>
