header on scroll

--- a/index.html
+++ b/index.html
@@ -243,115 +243,116 @@
 
     </div>
 </header>
-<section class="section1">
-    <div class="top_banner_slider">
-        <div class="banner"><a href="">
-            <img src="http://interconditioner.test-domain1.in.ua/app/media/banner-img/1.jpg" alt="">
-        </a></div>
-        <div class="banner">
-            <a href="/ru">
-                <img src="http://interconditioner.test-domain1.in.ua/app/media/banner-img/banner_1.png" alt="">
+<main>
+    <section class="section1">
+        <div class="top_banner_slider">
+            <div class="banner"><a href="">
+                <img src="http://interconditioner.test-domain1.in.ua/app/media/banner-img/1.jpg" alt="">
             </a></div>
-        <div class="banner"><a href="/ru">
-            <img src="http://interconditioner.test-domain1.in.ua/app/media/banner-img/2,2.jpg" alt="">
-        </a></div>
-    </div>
-    <div class="top_banner_slider_arrowsBox">
-        <div class="prev_btn"></div>
-        <div class="next_btn"></div>
-    </div>
-</section>
-<div class="section-wrapper">
-    <section class="container home-catalog">
-        <h1>Каталог</h1>
-        <div class="catalog-grid">
-            <div class="card"><a href="catalog.html">
-                <img src="media/home-catalog/4.png" alt="">
-                <p>Общепромышленная вентиляция</p>
-                <div class="go-corner">
-                    <div class="go-arrow"></div>
-                </div>
-            </a>
-            </div>
-            <div class="card"><a href="catalog.html">
-                <img src="media/home-catalog/91.png" alt="">
-                <p>Противопожарное оборудование</p>
-                <div class="go-corner">
-                    <div class="go-arrow"></div>
-                </div>
-            </a>
-            </div>
-
-            <div class="card"><a href="catalog.html">
-                <img src="media/home-catalog/100.png" alt="">
-                <p>Оборудование для монтажа вентиляторов</p>
-                <div class="go-corner">
-                    <div class="go-arrow"></div>
-                </div>
-            </a>
-            </div>
-
-
-            <div class="card"><a href="catalog.html">
-                <img src="media/home-catalog/category10.png" alt="">
-                <p>Кондиционеры центральные каркасные КЦК</p>
-                <div class="go-corner">
-                    <div class="go-arrow"></div>
-                </div>
-            </a>
-            </div>
-
-            <div class="card"><a href="catalog.html">
-                <img src="media/home-catalog/74.png" alt="">
-                <p>Сетевое оборудование</p>
-                <div class="go-corner">
-                    <div class="go-arrow"></div>
-                </div>
-            </a>
-            </div>
-
-
-            <div class="card"><a href="catalog.html">
-                <img src="media/home-catalog/category12.png" alt="">
-                <p>Автоматизация</p>
-                <div class="go-corner">
-                    <div class="go-arrow"></div>
-                </div>
-            </a>
-            </div>
-
-            <div class="card"><a href="catalog.html">
-                <img src="media/home-catalog/5.png" alt="">
-                <p>Отопительное оборудование</p>
-                <div class="go-corner">
-                    <div class="go-arrow"></div>
-                </div>
-            </a>
-            </div>
-
-            <div class="card"><a href="catalog.html">
-                <img src="media/home-catalog/74.png" alt="">
-                <p>Скачать каталоги</p>
-                <div class="go-corner">
-                    <div class="go-arrow"></div>
-                </div>
-            </a>
-            </div>
-
+            <div class="banner">
+                <a href="/ru">
+                    <img src="http://interconditioner.test-domain1.in.ua/app/media/banner-img/banner_1.png" alt="">
+                </a></div>
+            <div class="banner"><a href="/ru">
+                <img src="http://interconditioner.test-domain1.in.ua/app/media/banner-img/2,2.jpg" alt="">
+            </a></div>
+        </div>
+        <div class="top_banner_slider_arrowsBox">
+            <div class="prev_btn"></div>
+            <div class="next_btn"></div>
         </div>
     </section>
-    <section class="home-news">
-        <div class="container">
-            <h1>Новости</h1>
-            <div class="news-flex">
-                <div class="card">
-                    <a href="">
-                        <img src="media/home-newes1.png" alt="">
-                        <span>24/04/2019</span>
-                        <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
-                            круглого
-                            сечения КО 100</p>
-                        <span class="link--arrowed">
+    <div class="section-wrapper">
+        <section class="container home-catalog">
+            <h1>Каталог</h1>
+            <div class="catalog-grid">
+                <div class="card"><a href="catalog.html">
+                    <img src="media/home-catalog/4.png" alt="">
+                    <p>Общепромышленная вентиляция</p>
+                    <div class="go-corner">
+                        <div class="go-arrow"></div>
+                    </div>
+                </a>
+                </div>
+                <div class="card"><a href="catalog.html">
+                    <img src="media/home-catalog/91.png" alt="">
+                    <p>Противопожарное оборудование</p>
+                    <div class="go-corner">
+                        <div class="go-arrow"></div>
+                    </div>
+                </a>
+                </div>
+
+                <div class="card"><a href="catalog.html">
+                    <img src="media/home-catalog/100.png" alt="">
+                    <p>Оборудование для монтажа вентиляторов</p>
+                    <div class="go-corner">
+                        <div class="go-arrow"></div>
+                    </div>
+                </a>
+                </div>
+
+
+                <div class="card"><a href="catalog.html">
+                    <img src="media/home-catalog/category10.png" alt="">
+                    <p>Кондиционеры центральные каркасные КЦК</p>
+                    <div class="go-corner">
+                        <div class="go-arrow"></div>
+                    </div>
+                </a>
+                </div>
+
+                <div class="card"><a href="catalog.html">
+                    <img src="media/home-catalog/74.png" alt="">
+                    <p>Сетевое оборудование</p>
+                    <div class="go-corner">
+                        <div class="go-arrow"></div>
+                    </div>
+                </a>
+                </div>
+
+
+                <div class="card"><a href="catalog.html">
+                    <img src="media/home-catalog/category12.png" alt="">
+                    <p>Автоматизация</p>
+                    <div class="go-corner">
+                        <div class="go-arrow"></div>
+                    </div>
+                </a>
+                </div>
+
+                <div class="card"><a href="catalog.html">
+                    <img src="media/home-catalog/5.png" alt="">
+                    <p>Отопительное оборудование</p>
+                    <div class="go-corner">
+                        <div class="go-arrow"></div>
+                    </div>
+                </a>
+                </div>
+
+                <div class="card"><a href="catalog.html">
+                    <img src="media/home-catalog/74.png" alt="">
+                    <p>Скачать каталоги</p>
+                    <div class="go-corner">
+                        <div class="go-arrow"></div>
+                    </div>
+                </a>
+                </div>
+
+            </div>
+        </section>
+        <section class="home-news">
+            <div class="container">
+                <h1>Новости</h1>
+                <div class="news-flex">
+                    <div class="card">
+                        <a href="">
+                            <img src="media/home-newes1.png" alt="">
+                            <span>24/04/2019</span>
+                            <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
+                                круглого
+                                сечения КО 100</p>
+                            <span class="link--arrowed">
                         <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                             <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
                                 <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
@@ -359,35 +360,15 @@
                             </g>
                         </svg>
                     </span>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="">
-                        <img src="" alt="">
-                        <span>24/04/2019</span>
-                        <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
-                            круглого
-                            сечения КО 100</p>
-                        <span class="link--arrowed">
-                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
-                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
-                                    <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
-                                    <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
-                                </g>
-                            </svg>
-                        </span>
-                    </a>
-                </div>
-                <div class="card-column">
-                    <div class="card-sm">
+                        </a>
+                    </div>
+                    <div class="card">
                         <a href="">
-                            <img src="media/home-newes1.png" alt="">
-                            <div>
-                                <span>24/04/2019</span>
-                                <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов
-                                    обратных
-                                    круглого сечения КО 100</p>
-                            </div>
+                            <img src="" alt="">
+                            <span>24/04/2019</span>
+                            <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов обратных
+                                круглого
+                                сечения КО 100</p>
                             <span class="link--arrowed">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                 <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
@@ -398,17 +379,17 @@
                         </span>
                         </a>
                     </div>
-                    <div class="card-sm">
-                        <a href="">
-                            <!--                    <img src="" alt="">-->
-                            <div>
-                                <span>24/04/2019</span>
-                                <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов
-                                    обратных
-                                    круглого сечения КО 100</p>
-                            </div>
-
-                            <span class="link--arrowed">
+                    <div class="card-column">
+                        <div class="card-sm">
+                            <a href="">
+                                <img src="media/home-newes1.png" alt="">
+                                <div>
+                                    <span>24/04/2019</span>
+                                    <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов
+                                        обратных
+                                        круглого сечения КО 100</p>
+                                </div>
+                                <span class="link--arrowed">
                             <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                 <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
                                     <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
@@ -416,19 +397,40 @@
                                 </g>
                             </svg>
                         </span>
-                        </a>
+                            </a>
+                        </div>
+                        <div class="card-sm">
+                            <a href="">
+                                <!--                    <img src="" alt="">-->
+                                <div>
+                                    <span>24/04/2019</span>
+                                    <p>ЧАО "Интеркондиционер" освоило производство клапанов обратных круглого сечения КО 100 ЧАО "Интеркондиционер" освоило производство клапанов
+                                        обратных
+                                        круглого сечения КО 100</p>
+                                </div>
+
+                                <span class="link--arrowed">
+                            <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+                                <g fill="none" stroke="#2175FF" stroke-width="1.5" stroke-linejoin="round" stroke-miterlimit="10">
+                                    <circle class="arrow-icon--circle" cx="16" cy="16" r="15.12"></circle>
+                                    <path class="arrow-icon--arrow" d="M16.14 9.93L22.21 16l-6.07 6.07M8.23 16h13.98"></path>
+                                </g>
+                            </svg>
+                        </span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
+        </section>
+        <div class="news-page-link">
+            <a href="news.html" class="cta">
+                <span>все новости</span>
+                <img src="media/Arrow-sm-violet.svg" alt="">
+            </a>
         </div>
-    </section>
-    <div class="news-page-link">
-        <a href="news.html" class="cta">
-            <span>все новости</span>
-            <img src="media/Arrow-sm-violet.svg" alt="">
-        </a>
     </div>
-</div>
+</main>
 <footer>
     <div class="container">
         <div class="footer-logo">
