--- a/offices.html
+++ b/offices.html
@@ -13,6 +13,212 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<header>
+    <div class="header-top">
+        <div class="container">
+            <div class="logo"><a href=""><img src="media/logo.svg" alt=""></a></div>
+            <div class="logo-sm"><a href=""><img src="media/logo-sm.svg" alt=""></a></div>
+            <div class="header-top-right">
+                <div class="phones-block">
+                    <ul class="priority-phones">
+                        <li id="tel_num1"><a href="tel:+380577780644">+38 (057) 778 06 44</a></li>
+                        <li id="tel_num2"><a href="tel:+380577780645">+38 (057) 778 06 45</a></li>
+                    </ul>
+                    <div class="more_btn open_btn"></div>
+                    <div class="phones-popup">
+                        <div class="popup-arrow"></div>
+                        <ul class="main-phones">
+                            <li><a href="tel:+380577780646">+38 (057) 778 06 46</a></li>
+                            <li><a href="tel:+380577780639">+38 (057) 778 06 39</a></li>
+                        </ul>
+                        <div class="border-line"></div>
+                        <div class="phones-header">Oтдел продаж:</div>
+                        <ul>
+                            <li><a href="tel:+380577780639">+38 (057) 778 06 39 (40,44,45)</a></li>
+                            <li><a href="tel:+380500138075">+38 (050) 013 80 75</a></li>
+                            <li><a href="tel:+380677011657">+38 (067) 701 16 57</a></li>
+                            <li><a href="tel:+380632177580">+38 (063) 217 75 80</a></li>
+                            <li><a href="tel:0800408409">0 800 408 409</a> *</li>
+                        </ul>
+                        <span>*со стационарных и мобильных телефонов в пределах Украины бесплатно</span>
+                    </div>
+                </div>
+                <div class="location" id="location">
+                    <a href="" class="active">Рус</a> |
+                    <a href="">Укр</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="header-btm">
+        <div class="container">
+            <div class="logo"><a href=""><img src="media/logo.svg" alt=""></a></div>
+            <div class="logo-sm"><a href=""><img src="media/logo-sm.svg" alt=""></a></div>
+            <nav class="navbar-expand-xl navbar-light">
+                <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#navbar"
+                        aria-controls="navbar"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <img src="media/burger.svg" alt=""></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbar">
+                    <button
+                            class="close-menu-btn navbar-toggler"
+                            type="button"
+                            data-toggle="collapse"
+                            data-target="#navbar"
+                            aria-controls="navbar"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation">
+                        </span>
+                    </button>
+                    <ul class="nav">
+                        <li class="nav-item current-link">
+                            <a class="nav-link">О компании</a>
+                            <div class="drop-menu">
+                                <a class="dropdown-item" href="about.html">О нас</a>
+                                <a class="dropdown-item" href="about.html">Производство</a>
+                                <a class="dropdown-item" href="about.html">Сервис</a>
+                                <a class="dropdown-item" href="about.html">Стендовые испытания</a>
+                                <a class="dropdown-item" href="about.html">Вакансии</a>
+                            </div>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link">Каталог</a>
+                            <div class="drop-menu with-columns">
+                                <div class="menu-column">
+                                    <a class="dropdown-item" href="catalog.html">Общепромышленная вентиляция </a>
+                                    <span class="openSubmenu"></span>
+                                    <ul>
+                                        <li><a href="catalog.html">Вентиляторы радиальные</a></li>
+                                        <li><a href="catalog.html">Вентиляторы крышные</a></li>
+                                        <li><a href="catalog.html">Вентиляторы осевые</a></li>
+                                        <li><a href="catalog.html">Вентиляторы канальные</a></li>
+                                    </ul>
+                                    <a class="dropdown-item" href="catalog.html">Противопожарное оборудование </a>
+                                    <span class="openSubmenu"></span>
+                                    <ul>
+                                        <li><a href="catalog.html">Вентиляторы дымоудаления </a></li>
+                                        <li><a href="catalog.html">Клапаны дымоудаления</a></li>
+                                        <li><a href="catalog.html">Клапаны огнезадерживающие</a></li>
+                                    </ul>
+                                    <a class="dropdown-item" href="catalog.html">Оборудование для монтажа вентиляторов </a>
+                                    <span class="openSubmenu"></span>
+                                    <ul>
+                                        <li><a href="catalog.html">Стаканы</a></li>
+                                        <li><a href="catalog.html">Виброизоляторы и гибкие вставки</a></li>
+                                    </ul>
+                                </div>
+                                <div class="menu-column">
+                                    <a class="dropdown-item" href="catalog.html">Кондиционеры центральные каркасные КЦК</a>
+                                    <span class="openSubmenu"></span>
+                                    <span class="openSubmenu"></span>
+                                    <a class="dropdown-item" href="catalog.html">Сетевое оборудование</a>
+                                    <span class="openSubmenu"></span>
+                                    <ul>
+                                        <li><a href="catalog.html">Клапаны и заслонки </a></li>
+                                        <li><a href="catalog.html">Узлы прохода, дефлекторы, зонты, двери, шумоглушители </a></li>
+                                        <li><a href="catalog.html">Фильтры, ИРП</a></li>
+                                    </ul>
+                                    <a class="dropdown-item" href="catalog.html">Автоматизация </a>
+                                    <span class="openSubmenu"></span>
+                                    <a class="dropdown-item" href="catalog.html">Отопительное оборудование </a>
+                                    <span class="openSubmenu"></span>
+                                    <ul>
+                                        <li><a href="catalog.html">Агрегаты воздушно-отопительные </a></li>
+                                        <li><a href="catalog.html">Воздухонагреватель (калориферы) </a></li>
+                                    </ul>
+                                    <a class="dropdown-item" href="catalog.html">Скачать каталоги</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="program.html">Программы подбора</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="certificates.html">Сертификаты</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="news.html">Новости</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link">Контакты</a>
+                            <div class="drop-menu">
+                                <a class="dropdown-item" href="contacts.html">Главный офис</a>
+                                <a class="dropdown-item" href="offices.html">Представительства</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="search-btn open-search"></div>
+            <div class="form-btn gradient-btn open_btn" id="ask-btn">
+                <span class="open_btn">ЗАДАТЬ ВОПРОС</span>
+            </div>
+            <!--            <div class="form-wrap">-->
+            <div class="contact-form" id="contact-form-header">
+
+                <p>Вы можете задать вопрос, заполнив форму, и наши менеджеры ответят вам в самое ближайшее время!</p>
+                <span class="form-btn">
+            </span>
+                <form action="">
+                    <div class="form-item">
+                        <input type="text" placeholder="Имя:" name="name" id="name" autocomplete="off">
+                        <label for="name">Имя:</label>
+                    </div>
+                    <div class="form-item">
+                        <input type="tel" name="tel" id="tel" autocomplete="off" placeholder="Телефон">
+                        <label for="tel">Телефон:</label>
+                    </div>
+                    <div class="form-item">
+                        <input type="email" placeholder="Email:" name="email" id="email" autocomplete="off">
+                        <label for="email">Email:</label>
+                    </div>
+                    <div class="form-item">
+                        <input type="text" placeholder="Организация:" name="org" id="org" autocomplete="off">
+                        <label for="org">Организация:</label>
+                    </div>
+                    <div class="form-item">
+                        <textarea name="message" id="message" cols="3" rows="2" placeholder="Сообщение:"></textarea>
+                        <label for="message">Сообщение:</label>
+                    </div>
+                    <div class="download-file">
+                        Прикрепить фаил
+                        <input id="file" type="file" multiple>
+                        <label for="file"></label>
+                        <div>
+                            Загруженно файлов: <span class="files-count">0</span>
+                        </div>
+                        <div class="allow-files">
+                            Максимальный размер файла: <span>9.91 MB</span>
+                        </div>
+                        <div class="alert-message">
+                            <span>размер файла превышает максимальный</span></div>
+                    </div>
+                    <div>
+                    </div>
+                    <button class="gradient-btn">отправить</button>
+                </form>
+                <!--                </div>-->
+            </div>
+        </div>
+        <div class="search-wrap">
+            <div class="search-line">
+                <form action="">
+                    <input type="text" placeholder="Поиск..." required autocomplete="off">
+                </form>
+                <span class="search-btn">
+                    <img src="media/close.svg" alt="">
+                </span>
+            </div>
+        </div>
+
+    </div>
+</header>
 <main class="offices">
     <div class="container">
         <nav aria-label="breadcrumb">
