programs mob view

--- a/program.html
+++ b/program.html
@@ -19,8 +19,7 @@
             <div class="col-xl-6 mb-5 mb-xl-0">
                 <div class="program-descr-wrap">
                     <h2>Программа подбора Design Conditioner кондиционеров КЦК</h2>
-                    <div class="d-lg-none">Программа предназначена для DeskTop версии. Мобильная версия находится в разработке.</div>
-                    <div class="program-descr d-none d-lg-block">
+                    <div class="program-descr">
                         <p>Программа Design Conditioner предназначена для подбора и расчета оборудования кондиционеров центральных каркасных стационарных (напольных)
                             производительностью по воздуху от 0,3 до 50 тыс. м3/ч и подвесных производительностью по воздуху от 0,3 до 6 тыс. м3/ч.</p>
                         <div class="design-pr">
@@ -28,7 +27,7 @@
                             <div class="gradient-btn">
                                 <a href="" download="">скачать</a>
                             </div>
-                            <div class="border-btn">
+                            <div class="border-btn md-none">
                                 <a href="" target="_blank">посмотреть</a>
                             </div>
                         </div>
@@ -39,8 +38,7 @@
             <div class="col-xl-6">
                 <div class="program-descr-wrap">
                     <h2>Программа Fans</h2>
-                    <div class="d-lg-none">Программа предназначена для DeskTop версии. Мобильная версия находится в разработке.</div>
-                    <div class="program-descr d-none d-lg-block">
+                    <div class="program-descr">
                         <p>Программа предназначена для расчета и подбора вентиляторов производительностью по воздуху от 0,3 до 80 тыс. м3/ч. </p>
                         <h4>Требованию к программному обеспечению:</h4>
                         <ul>
@@ -55,7 +53,7 @@
                                         <a href="" download="">Скачать</a>
                                     </div>
                                 </td>
-                                <td></td>
+                                <td class="md-none"></td>
                             </tr>
                             <tr>
                                 <td>FansPortable</td>
@@ -64,7 +62,7 @@
                                         <a href="" download="">Скачать</a>
                                     </div>
                                 </td>
-                                <td></td>
+                                <td class="md-none"></td>
                             </tr>
                             <tr>
                                 <td>инструкция</td>
@@ -73,7 +71,7 @@
                                         <a href="" download="">Скачать</a>
                                     </div>
                                 </td>
-                                <td>
+                                <td class="md-none">
                                     <div class="border-btn">
                                         <a href="" target="_blank">Посмотреть</a>
                                     </div>
@@ -86,7 +84,7 @@
                                         <a href="" download="">Скачать</a>
                                     </div>
                                 </td>
-                                <td></td>
+                                <td class="md-none"></td>
                             </tr>
                         </table>
                     </div>
