added todo comments

--- a/program.html
+++ b/program.html
@@ -19,6 +19,10 @@
             <div class="col-xl-6 mb-5 mb-xl-0">
                 <div class="program-descr-wrap">
                     <h2>Программа подбора Design Conditioner кондиционеров КЦК</h2>
+<!--                    todo: remove div "<div class="d-lg-none">Программа предназначена..."-->
+
+
+<!--                    todo: remove class 'd-none & d-lg-block-->
                     <div class="program-descr">
                         <p>Программа Design Conditioner предназначена для подбора и расчета оборудования кондиционеров центральных каркасных стационарных (напольных)
                             производительностью по воздуху от 0,3 до 50 тыс. м3/ч и подвесных производительностью по воздуху от 0,3 до 6 тыс. м3/ч.</p>
@@ -27,6 +31,8 @@
                             <div class="gradient-btn">
                                 <a href="" download="">скачать</a>
                             </div>
+
+<!--                            todo: change class   d-md-none -> md-none-->
                             <div class="border-btn md-none">
                                 <a href="" target="_blank">посмотреть</a>
                             </div>
@@ -38,6 +44,9 @@
             <div class="col-xl-6">
                 <div class="program-descr-wrap">
                     <h2>Программа Fans</h2>
+<!--                    todo: remove div "<div class="d-lg-none">Программа предназначена..."-->
+
+<!--                    todo: remove class 'd-none & d-lg-block-->
                     <div class="program-descr">
                         <p>Программа предназначена для расчета и подбора вентиляторов производительностью по воздуху от 0,3 до 80 тыс. м3/ч. </p>
                         <h4>Требованию к программному обеспечению:</h4>
@@ -53,6 +62,8 @@
                                         <a href="" download="">Скачать</a>
                                     </div>
                                 </td>
+
+<!--                                todo: add class "md-none"-->
                                 <td class="md-none"></td>
                             </tr>
                             <tr>
@@ -62,6 +73,7 @@
                                         <a href="" download="">Скачать</a>
                                     </div>
                                 </td>
+<!--                                todo: add class "md-none"-->
                                 <td class="md-none"></td>
                             </tr>
                             <tr>
@@ -71,6 +83,7 @@
                                         <a href="" download="">Скачать</a>
                                     </div>
                                 </td>
+<!--                                todo: add class "md-none"-->
                                 <td class="md-none">
                                     <div class="border-btn">
                                         <a href="" target="_blank">Посмотреть</a>
@@ -84,6 +97,7 @@
                                         <a href="" download="">Скачать</a>
                                     </div>
                                 </td>
+<!--                                todo: add class "md-none"-->
                                 <td class="md-none"></td>
                             </tr>
                         </table>
