about page banner

--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
 </head>
 <body>
 <main class="about">
-    <div class="about-banner"
-         style="background-image: url('media/about-banner.png')">
+    <div class="about-banner">
+        <img src="media/about-banner.png" alt="">
     </div>
     <nav>
         <ul>
